# NebusTest

./: .env.example  .gitignore  README.md  guideProject.md  pyproject.toml  requirements.txt  workBestPractice.md
src/repo_summarizer/: main.py
src/repo_summarizer/domain/: entities.py  exceptions.py  value_objects.py
src/repo_summarizer/domain/ports/: llm_gateway.py  repo_fetcher.py
src/repo_summarizer/infrastructure/: config.py  github_rest_adapter.py  openai_adapter.py
src/repo_summarizer/interface/: app.py  dependencies.py  error_handlers.py  routes.py  schemas.py
src/repo_summarizer/services/: ast_extractor.py  content_assembler.py  file_filter.py  file_scorer.py  security_sentinel.py  summarize_repo.py  token_budget.py
