[project]
name = "repo-summarizer"
version = "1.0.0"
description = "GitHub Repo Summarizer API — fetches a public repo and returns an LLM-generated summary"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "httpx>=0.27,<1",
    "openai>=1.30,<2",
    "tiktoken>=0.7,<1",
    "networkx>=3.2,<4",
    "scipy>=1.12,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
repo-summarizer = "repo_summarizer.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
